# feynman-12-19

./: .env  AGENTS.md  API_DOCS.md  README.md  main.py  pyproject.toml  run.py
app/: __init__.py  models.py
app/routes/: auth.py  chat.py  main.py  pet.py  shop.py
app/services/: ai_service.py  pet_service.py
app/static/js/: index.js
app/templates/: index.html  login.html  pets.html  sessions.html  shop.html
instance/: feynman.db
