[project]
name = "feynman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "openai>=2.13.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
